[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Menu/ItemButton.gd" type="Script" id=2]
[ext_resource path="res://Menu/Graphics/Curency Egg.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="Control" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Button" type="Button" parent="PanelContainer"]
margin_right = 1014.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1014.0
margin_bottom = 590.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 1008.0
margin_bottom = 584.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 332.0
margin_bottom = 578.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemImage" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/CenterContainer"]
margin_left = 134.0
margin_top = 257.0
margin_right = 198.0
margin_bottom = 321.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 336.0
margin_right = 1002.0
margin_bottom = 578.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="NameLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 666.0
margin_bottom = 382.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Flamethrower"
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 386.0
margin_right = 666.0
margin_bottom = 578.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CostLabel" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 637.0
margin_bottom = 192.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "100"
align = 2
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 641.0
margin_right = 666.0
margin_bottom = 192.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/CenterContainer"]
margin_top = 83.0
margin_right = 25.0
margin_bottom = 108.0
rect_min_size = Vector2( 25, 25 )
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
[connection signal="pressed" from="PanelContainer/Button" to="." method="_on_Button_pressed"]
